docs: fix bug
