# docs/swagger.json
@@ -395,7 +395,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/go-simple-rest_src_v1_authors_model.Article"
+                            "$ref": "#/definitions/go-simple-rest_src_v1_authors_model.AuthorArticle"
                         }
                     }
                 ],
@@ -526,31 +526,20 @@
         }
     },
     "definitions": {
-        "go-simple-rest_src_v1_auth_model.User": {
+        "go-simple-rest_src_v1_authors_model.Author": {
             "type": "object",
             "properties": {
-                "articleCount": {
-                    "type": "integer"
-                },
-                "articleLikesCount": {
-                    "type": "integer"
-                },
                 "createdAt": {
                     "type": "string"
                 },
                 "firstName": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
+                "id": {},
                 "lastName": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
-                },
-                "role": {
+                "updatedAt": {
                     "type": "string"
                 },
                 "username": {
@@ -558,7 +547,7 @@
                 }
             }
         },
-        "go-simple-rest_src_v1_authors_model.Article": {
+        "go-simple-rest_src_v1_authors_model.AuthorArticle": {
             "type": "object",
             "properties": {
                 "authorId": {
@@ -600,27 +589,6 @@
                 },
                 "views": {
                     "type": "integer"
-                }
-            }
-        },
-        "go-simple-rest_src_v1_authors_model.Author": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "id": {},
-                "lastName": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
@@ -669,7 +637,7 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/go-simple-rest_src_v1_auth_model.User"
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
@@ -689,6 +657,38 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "articleCount": {
+                    "type": "integer"
+                },
+                "articleLikesCount": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "role": {
                     "type": "string"
                 },
                 "username": {
