# src/v1/articles/model/struct.go
@@ -1,4 +1,4 @@
-package articles
+package model
 
 import (
 	"context"
@@ -38,6 +38,30 @@ type Comment struct {
 	DELETEDAT       time.Time          `bson:"deletedAt,omitempty" json:"deletedAt,omitempty"`
 	STATUS          string             `bson:"status,omitempty" json:"status,omitempty"`
 	PARENTCOMMENTID primitive.ObjectID `bson:"parentCommentId,omitempty" json:"parentCommentId,omitempty"`
+}
+
+type Author struct {
+	ID        interface{} `bson:"_id,omitempty" json:"id,omitempty"`
+	FIRSTNAME string      `bson:"firstName" json:"firstName"`
+	LASTNAME  string      `bson:"lastName" json:"lastName"`
+	USERNAME  string      `bson:"username" json:"username"`
+	CREATEDAT time.Time   `bson:"createdAt,omitempty" json:"createdAt,omitempty"`
+	UPDATEDAT time.Time   `bson:"updatedAt,omitempty" json:"updatedAt,omitempty"`
+}
+
+type AuthorArticle struct {
+	ID         interface{} `bson:"_id,omitempty" json:"id,omitempty"`
+	TITLE      string      `bson:"title" json:"title"`
+	CONTENT    string      `bson:"content" json:"content"`
+	AUTHOR     Author      `bson:"authorId,omitempty" json:"authorId,omitempty"`
+	LIKES      int         `bson:"likes,omitempty" json:"likes,omitempty"`
+	VIEWS      int         `bson:"views,omitempty" json:"views,omitempty"`
+	CREATEDAT  time.Time   `bson:"createdAt,omitempty" json:"createdAt,omitempty"`
+	UPDATEDAT  time.Time   `bson:"updatedAt,omitempty" json:"updatedAt,omitempty"`
+	STATUS     string      `bson:"status,omitempty" json:"status,omitempty"`
+	CATEGORIES []string    `bson:"categories,omitempty" json:"categories,omitempty"`
+	TAGS       []string    `bson:"tags,omitempty" json:"tags,omitempty"`
+	DELETEDAT  time.Time   `bson:"deletedAt,omitempty" json:"deletedAt,omitempty"`
 }
 
 type Repository interface {
